--- a/app/digicode.html
+++ b/app/digicode.html
@@ -1,19 +1,9 @@
-<div class="digicode">
+<div class="digicode box-shadow">
   <div layout="column">
-    <div layout="row">
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[0])">{{ ctrl.order[0] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[1])">{{ ctrl.order[1] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[2])">{{ ctrl.order[2] }}</md-button>
-    </div>
-    <div layout="row">
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[3])">{{ ctrl.order[3] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[4])">{{ ctrl.order[4] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[5])">{{ ctrl.order[5] }}</md-button>
-    </div>
-    <div layout="row">
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[6])">{{ ctrl.order[6] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[7])">{{ ctrl.order[7] }}</md-button>
-      <md-button class="md-fab md-primary" ng-click="ctrl.check(ctrl.order[8])">{{ ctrl.order[8] }}</md-button>
+    <div layout="row" ng-repeat="row in [0, 3, 6]">
+      <md-button class="md-fab md-primary" ng-repeat="col in [0, 1, 2]" ng-click="ctrl.check(ctrl.order[col + row])">
+        {{ ctrl.order[col + row] }}
+      </md-button>
     </div>
   </div>
 </div>
