--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="digicode">
+<html ng-app="main">
 
 <head>
   <meta charset="UTF-8">
@@ -11,9 +11,12 @@
 
 <body>
   <div layout="column">
-    <div style="height: 8em;"></div>
-    <div layout="row" layout-align="center">
-      <digicode></digicode>
+    <div style="height: 4em;"></div>
+    <div layout="column" ng-controller="ctrl as ctrl">
+      <h4 style="text-align: center;">{{ ctrl.title }} - {{ ctrl.count }}</h4>
+      <div layout="row" layout-align="center">
+        <digicode max-try="3" pin="ctrl.pin()" success="ctrl.success()" failure="ctrl.failure()"></digicode>
+      </div>
     </div>
   </div>
 
@@ -23,6 +26,7 @@
   <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
   <script type="text/javascript" src="bower_components/ng-underscore/build/ng-underscore.js"></script>
   <script type="text/javascript" src="app/digicode.js"></script>
+  <script type="text/javascript" src="app/main.js"></script>
 </body>
 
 </html>
