--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
   <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
-  <script type="text/javascript" src="bower_components/ng-underscore/build/ng-underscore.js"></script>
+  <script type="text/javascript" src="angular-underscore.js"></script>
   <script type="text/javascript" src="angular-digicode.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </body>
