--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div style="height: 4em;"></div>
     <div layout="column" ng-controller="ctrl as main">
       <p style="text-align: center;">
-        {{ main.title }} ( {{ main.count }} :
-        <span style="color: green;">{{ main.successCount }}</span> /
-        <span style="color: red;">{{ main.failureCount }}</span>
+        {{ main.title }} ( <span id="ma-digicode-count">{{ main.count }}</span> :
+        <span id="ma-digicode-success" style="color: green;">{{ main.successCount }}</span> /
+        <span id="ma-digicode-failure" style="color: red;">{{ main.failureCount }}</span>
         )<br>
       </p>
       <div layout="row" layout-align="center">
