--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="angular-digicode.css">
+  <style>
+    .box-shadow {
+      -webkit-box-shadow: 0 12px 30px darkgrey;
+      box-shadow: 0 12px 30px darkgrey;
+    }
+    .round-corner {
+      border-radius: 15px;
+      padding: 10px;
+    }
+  </style>
   <title>Digicode</title>
 </head>
 
@@ -16,11 +26,11 @@
       <p style="text-align: center;">
         {{ main.title }} ( <span id="ma-digicode-count">{{ main.count }}</span> :
         <span id="ma-digicode-success" style="color: green;">{{ main.successCount }}</span> /
-        <span id="ma-digicode-failure" style="color: red;">{{ main.failureCount }}</span>
-        )<br>
+        <span id="ma-digicode-failure" style="color: red;">{{ main.failureCount }}</span> )
+        <br>
       </p>
       <div layout="row" layout-align="center">
-        <digicode max-try="3" pin="main.pin()" success="main.success()" failure="main.failure()"></digicode>
+        <digicode class="box-shadow round-corner" max-try="3" check-pin="main.checkPin(pin)" success="main.success()" failure="main.failure()"></digicode>
       </div>
     </div>
   </div>
