change element name to ma-digicode

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <br>
       </p>
       <div layout="row" layout-align="center">
-        <digicode class="box-shadow round-corner" max-try="3" check-pin="main.checkPin(pin)" success="main.success()" failure="main.failure()"></digicode>
+        <ma-digicode class="box-shadow round-corner" max-try="3" check-pin="main.checkPin(pin)" success="main.success()" failure="main.failure()"></ma-digicode>
       </div>
     </div>
   </div>
